Add route to delete an application with tests. Also enabled CORS with default settings.
