# server/common/api.yml
@@ -74,6 +74,21 @@ paths:
           description: Return the application with the specified id
         404:
           description: Application not found
+    delete:
+      tags:
+        - Applications
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The id of the application to delete
+          type: integer
+      responses:
+        204:
+          description: Return the status of the request
+        404:
+          description: Application not found
+    
 
   /spec:
     get:
